jackett/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
  labels:
    app: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:v0.14.164-ls58
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9117
          protocol: TCP
        volumeMounts:
          - name: jacket-config
            mountPath: "/config"
          - name: jacket-downloads
            mountPath: "/downloads"
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: pvc-nfs-client-provisioner-jackett-config
        - name: jackett-downloads
          persistentVolumeClaim:
            claimName: pvc-nfs-client-provisioner-jackett-downloads
