jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
spec:
  ports:
  - port: 80
    targetPort: 9117
    protocol: TCP
    name: http
  selector:
    app: jackett
