jackett/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jackett.192.168.50.143.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jackett-service
          servicePort: 9117
